# project

./: .dockerignore  Dockerfile  LICENSE  LICENSE-EDUCATIONAL.md  Makefile  NO-LICENSE-NOTICE.md  PROJECT_SUMMARY.md  README.md  docker-compose.yml  docker-run.bat  docker-run.sh  full_map.csv  home_to_cafe.csv  map_direct_save.py  map_draw.py  mas_map.py  optimal_tour.csv  pyproject.toml  requirements.txt  run_project.bat  run_project.sh  test.py
doc/: structure.md  what_is_BFS.md
result/: home_to_cafe.csv  optimal_tour.csv
src/: caffee_map.py  map_direct_save.py  map_draw.py  mas_map.py
